# mc_panda_lirmm

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml  package.yml
.github/workflows/sources/: package.yml
calibrated_urdf/: CMakeLists.txt  README.md
calibrated_urdf/panda2lirmm/: panda_default.in.urdf
calibrated_urdf/panda2lirmm/fr1/: panda_default.in.urdf
calibrated_urdf/panda7lirmm/fr1/: panda_default.in.urdf
calibrated_urdf/pandaganesh/fr1/: panda_default.in.urdf
cmake/: Config.cmake.in
debian/: changelog  control
modules/: CMakeLists.txt  config.h.in  module.cpp  module.h
modules/include/mc_panda_lirmm/: config.h.in  panda_lirmm.h
modules/rsdf/panda2_lirmm/: Panda2LIRMM.rsdf
modules/src/: config.in.h  module.cpp  panda_lirmm.cpp
tests/: CMakeLists.txt  test_module.cpp
